[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/main/RLocation/RLocation.gd" type="Script" id=1]
[ext_resource path="res://media/texture/test/test2.jpg" type="Texture" id=2]
[ext_resource path="res://font/VarsityTeam-Bold18.tres" type="DynamicFont" id=3]
[ext_resource path="res://font/VarsityTeam-Bold12.tres" type="DynamicFont" id=4]

[node name="RLocation" type="Button"]
margin_right = 156.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 120 )
flat = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 156.0
margin_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 86.0
margin_right = 156.0
margin_bottom = 106.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RLocation"
align = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
margin_top = 106.0
margin_right = 156.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "(Time)"
align = 1
[connection signal="mouse_entered" from="." to="." method="_on_RLocation_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_RLocation_mouse_exited"]
